--- a/source/_posts/2021-05-26-mnn.markdown
+++ b/source/_posts/2021-05-26-mnn.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "移动端AI算计加速"
+title:      "移动端AI算力加速"
 date:       2021-05-26 02:00:00
 author:     "huailiang"
 tags:
@@ -18,6 +18,8 @@ tags:
 随着国内厂商不断的优化， 我们看到了华为推出的麒麟芯片（麒麟980之后带独立的NPU）使用[HiAI][i2]框架来进行AI加速运算， [阿里的MNN][i1]则依靠大量手写汇编实现核心运算，充分发挥 ARM CPU 的算力， 整合不同后端（backend: OpenCL、Vulkan、OpenGL, Metal)进行深度优化来适配不同的设备。这些国内的厂商都提供了各自的工具（比如说华为HiAI的转换工具OMG, 阿里的mmnconvert）来转换主机上运行的Tensorflow、Caffee模型为自己量化的模型。
 
 ![](/img/post-ml/hiai.jpeg)
+
+在处理相同的AI运算时，NPU的性能是 CPU 的 25 倍，GPU 的 6.25 倍（25/4），能效比上，NPU 更是达到了 CPU 的 50 倍，GPU 的 6.25 倍（50/8）。在测试中发现，麒麟 970 的 NPU 每分钟可以识别出 2005 张照片，而不使用 NPU 的话则每分钟只能识别 97 张，明显看出独立NPU的算力优势巨大。
 
 #### 二、环境
 
