--- a/source/_posts/2021-08-29-adb.markdown
+++ b/source/_posts/2021-08-29-adb.markdown
@@ -8,13 +8,12 @@ tags:
 ---
 
 
-#### 一、概述
-
+### 一、概述
 
 
 由于目前开发的AR内容， 只能在手机上运行， 看不到代码的运行过程。 为了将运行过程中产生的中间数据传送到PC端，比如说预览流， 这里需要实现的一套信息传送机制， 能实现实时将数据从手机传递到PC。 这次实现基于Android端Java代码， PC端c#代码进行单向传递， 并最终在3D编辑器Unity实时显示的框架。
 
-#### 二. adb forward
+### 二. adb forward
 
 adb forward的功能是建立一个转发，adb forward tcp:11111 tcp:22222的意思是，将PC端的11111端口收到的数据，转发给到手机中22222端口。但是光执行这个命令还不能转发数据，还需要完成两个步骤才能传数据。这两个步骤是：
 
@@ -59,6 +58,38 @@ adb forward --remove tcp:11111
 （3）adbd进程将数据发送给端口为22222的server（手机端应用创建的）
 传递是双向的，第（1）和第（3）步是通过socket实现的，所以通过socket的读和写就完成了PC端应用和手机端应用的数据传递。
 
+
+### UDP 支持
+
+adb forward不能转发UDP端口信息，只能是TCP…. adb forward tcp:6100 tcp:7100. 这样就将宿主机的6100端口映射到模拟器的7100端口上(将tcp改成udp，会一直提示绑定失败),也正因为如此我发现了转发端口的基本命令redir。
+
+```
+redir add < udp/tcp >:< pc端口 >:< 模拟器端口 >
+```
+
+如:
+```
+redir add udp:1096:1097 
+
+redir tcp:1096:1097
+```
+
+作用就是将PC的1096端口转发到android设备的1097端口，当然两个端口号可以相同，因为他们是在两个不同的设备上。但是有个缺点，就是不如adb forward灵活。
+
+
+例如：redir add udp:5000:6000  这样所有在开发机上5000端口的udp通信都会被重定向到模拟器的6000端口上。
+
+添加成功后，我们可以用redir list命令来列出已经添加的映射端口，redir del可以进行删除。
+
+```
+redir list
+```
+
+### 实践
+
+基于adb forward tcp 建立的的端口转发机制， 作者实现了一个Demo, 利用c#的Socket的TCP，手机端进行监听， pc端直接进行连接。 代码已上传到[github][i1], 具体的效果如下图：
+
+![](/img/post-android/adb3.jpg)
 
 
 [i1]: https://blog.csdn.net/u013553529/article/details/80036227
